--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: calorypal-service
 spec:
+  type: NodePort
   selector:
     app: calorypal
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
+    nodeport: 31000
