--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: calorypal-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: calorypal
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
-    nodeport: 31000
+    
